--- a/BlazorPokedex.Client/Pages/PokeDex.razor
+++ b/BlazorPokedex.Client/Pages/PokeDex.razor
@@ -4,40 +4,15 @@
 @using Services
 @inject IPokeApiClient PokeApiClient
 
-<h3>PokeDex</h3>
+<PokemonGrid Pokemons="Pokemons" NumberOfRows="10" />
 
-@if(pokemons == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <div>
-        @for(int i = 0; i < NumberOfRows; i++)
-        {
-            <div class="row">
-                @foreach (var pokemon in pokemons.Skip(i * 6).Take(6))
-                {
-                    <div class="card pokeCard mb-4 bg-@(pokemon.Types.FirstOrDefault().PokemonType.Name)">
-                        <div class="card-body">
-                            <h4 class="card-title">@pokemon.Name</h4>
-                            <img src="@pokemon.Sprites.Front" class="img-fluid" alt="@pokemon.Name"/>
-                        </div>
-                    </div>
-                }
-            </div>
-
-        }
-    </div>
-}
 
 @code {
-    IEnumerable<Pokemon> pokemons = new List<Pokemon>();
-    public int NumberOfRows { get; set; } = 5;
+    public IEnumerable<Pokemon> Pokemons { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        pokemons = await PokeApiClient.GetAllPokemons();
+        Pokemons = await PokeApiClient.GetAllPokemons();
     }
 
 }
