--- a/BlazorPokedex.Client/Pages/PokeDex.razor
+++ b/BlazorPokedex.Client/Pages/PokeDex.razor
@@ -4,15 +4,59 @@
 @using Services
 @inject IPokeApiClient PokeApiClient
 
-<PokemonGrid Pokemons="Pokemons" NumberOfRows="10" />
+<h3>PokeDex</h3>
 
+<div>
+     <div class="row">
+         <div class="col">
+             <Pagination MetaData="paginationMetaData" Spread="2" SelectedPage="SelectedPage" />
+         </div>
+
+    </div> 
+
+    <PokemonGrid Pokemons="Pokemons" NumberOfRows="5" />
+
+</div>
 
 @code {
     public IEnumerable<Pokemon> Pokemons { get; set; }
 
+    PaginationMetaData paginationMetaData = new PaginationMetaData();
+
+    PaginationParameters paginationParameters = new PaginationParameters();
+
     protected override async Task OnInitializedAsync()
     {
-        Pokemons = await PokeApiClient.GetAllPokemons();
+        var result = await PokeApiClient.GetAllPokemons(paginationParameters);
+
+        var pokemons = new List<Pokemon>();
+
+        foreach (var pokemon in result.Pokemons)
+            pokemons.Add(await PokeApiClient.GetPokemon(pokemon.Name));
+
+        Pokemons = pokemons;
+
+        paginationMetaData.TotalCount = result.Count;
+        paginationMetaData.TotalPages = paginationMetaData.TotalCount / paginationParameters.PageSize;
+    }
+
+    private async Task SelectedPage(int page)
+    {
+        paginationParameters.PageNumber = page;
+
+        await GetPokemons();
+    }
+
+    private async Task GetPokemons()
+    {
+        var result = await PokeApiClient.GetAllPokemons(paginationParameters);
+
+        var pokemons = new List<Pokemon>();
+
+        foreach (var pokemon in result.Pokemons)
+            pokemons.Add(await PokeApiClient.GetPokemon(pokemon.Name));
+
+        Pokemons = pokemons;
     }
 
 }
